Changelog
=========

2020.2.0rc2 (unreleased)
------------------------

- Add list workspaces action for new frontend. [njohner]


2020.2.0rc1 (2020-03-11)
------------------------

- Extend the @config endpoint with an `apps_url` attribute. [elioschmutz]
- Extend policytemplates to use the single thread setup. [elioschmutz]
- Extend policytemplates with workspace deployment. [elioschmutz]
- Extend policytemplates with gever-ui activation. [elioschmutz]
- Add API service to create document from template. [deiferni]
- Restrict `geverui` cookie to admin unit. [elioschmutz]
- Extend the opengever deployment directive with workspace roles. [elioschmutz]
- Add API endpoint to copy documents from a workspace. [njohner]
- Add API endpoint to list documents in linked workspace. [njohner]
- Allow copying mails to linked workspace. [njohner]
- Set seen_tours for all users in test fixture. [njohner]
- Add support for Office Online aka WOPI. [buchi]


2020.1.0 (2020-02-26)
---------------------

- Add smoke tests for rewrite rules and VHost configs. [lgraf]
- Add container title to task activities. [njohner]
- Set document_date and changed in bundle factory. [njohner]
- Handle changed and modified in ogg bundles. [njohner]
- Allow Administrators to add new keywords. [njohner]
- Implement @copy-document-to-workspace endpoint. [elioschmutz]
- Assign correct role Reader to reader_group. [deiferni]
- Allow administrators to deactivate dossiers. [njohner]
- Add permission and role to use the workspace Client. [njohner]
- Add french titles for initial content in the policytemplate. [phgross]
- Enable the solr flag in the policytemplate. [phgross]
- Implement @linked-workspaces endpoint. [elioschmutz]
- Implement @create-linked-workspace endpoint. [elioschmutz]


2020.1.0rc2 (2020-02-11)
------------------------

- Use Teamraum in mail header for invitations. [njohner]
- Integrate related workspaces to dossiers. [elioschmutz]