@@ -287,6 +287,15 @@
 
   <plone:service
       method="GET"
+      for="opengever.contact.interfaces.IContactFolder"
+      factory=".userlisting.UserListingGet"
+      name="@user-listing"
+      permission="zope2.View"
+      />
+
+
+  <plone:service
+      method="GET"
       for="zope.interface.Interface"
       factory=".livesearch.GeverLiveSearchGet"
       name="@livesearch"
