@@ -5,6 +5,7 @@ Changelog
 ------------------------
 
 - Add list workspaces action for new frontend. [njohner]
+- Add ogds user listing via @user-listing endpoint. [deiferni]
 
 
 2020.2.0rc1 (2020-03-11)
